<resources>
    <string name="app_name">TruongHoc</string>
    <string name="mac_dinh">Không</string>
    <string name="truong_view">Trường:</string>
    <string name="dia_chi_view">D/C:</string>
    <string name="sdt_view">SĐT:</string>
    <string name="sua">Sửa</string>
    <string name="luu">Lưu</string>
    <string name="tieude_hoc_sinh">Tất Cả Học Sinh</string>
    <string name="tieude_giao_vien">Tất Cả Giáo Viên</string>
    <string name="ten">Tên: %1$s</string>
    <string name="gioi_tinh">Giới Tính: %1$s</string>
    <string name="sinh_ngay">Sinh Ngày: %1$s</string>
    <string name="lop">Lớp: %1$s</string>
    <string name="ten_view">Họ Và Tên</string>
    <string name="gioitinh_view">Giới Tính</string>
    <string name="sinhngay_view">Ngày/Tháng/Năm Sinh</string>
    <string name="lop_view"> Lớp Học</string>
    <string name="chup_anh">Chụp Ảnh</string>
    <string name="thu_vien">Thư Viện</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_danh_sach_hoc_sinh">Danh Sách Học Sinh</string>
    <string name="tim_kiem_hoc_sinh">Tìm kiếm học sinh</string>
    <string name="ten_truong">Tên trường</string>
    <string name="dia_chi_truong">Địa chỉ trường</string>
    <string name="so_dien_thoai">Số điện thoại</string>
</resources>