<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.feature.themhocsinh.ThemHocSinhActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/Theme.TruongHoc.Actionbar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Thông tin học sinh"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnEdit"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/selector_edit_save" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/offset_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Họ và tên"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTen"
                style="@style/Theme.TruongHoc.EditText"
                android:layout_marginTop="@dimen/size_5"
                android:hint="@string/ten_view"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_horizontal"
                android:text="Giới tính"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtGioiTinh"
                style="@style/Theme.TruongHoc.EditText"
                android:layout_marginTop="@dimen/size_5"
                android:hint="@string/gioitinh_view"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_horizontal"
                android:text="Ngày sinh"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnDob"
                style="@style/Theme.TruongHoc.Text.Edit"
                android:layout_marginTop="@dimen/size_5"
                android:hint="@string/sinhngay_view"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_horizontal"
                android:text="Lớp học"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtLop"
                style="@style/Theme.TruongHoc.EditText"
                android:layout_marginTop="@dimen/size_5"
                android:hint="@string/lop_view"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:layout_marginTop="20dp"
                android:text="Xóa"
                android:textAllCaps="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
